feat: add metadata endpoint
Add the metadata endpoint so that clients can get the server's
authorization and token endpoints.

Changes:

- Add a config object to allow administrators to configure the binding
  address, binding port and domain name.
- Add a target in the magefiles and a step in the CI workflow to run
  go vet.
- Add the Dockerfile.
- Replace the --address flag with the --config flag.
- Add the metadata endpoint to the router to return a JSON document
  containing the URLs to the metadata and token endpoints.

--- a/.forgejo/workflows/workflow.yaml
+++ b/.forgejo/workflows/workflow.yaml
@@ -28,6 +28,10 @@ jobs:
       uses: https://codeflow.dananglin.me.uk/actions/mage-ci@main
       with:
         target: gosec
+    - name: Run go vet
+      uses: https://codeflow.dananglin.me.uk/actions/mage-ci@main
+      with:
+        target: govet
 
   style:
     name: Style
