feat: add setup flow
Summary:

Allow the user to set up their profile and initialise the server via
the setup endpoint.

Changes:

- Added endpoints for the setup flow.
- Added the BoltDB database backend to store the user's profile and a
  key that is used as a flag to determine whether or not the user has
  initialised the server.
- Updated the Config type by adding a field for the database path.
- Added functionality to canonicalise the URL to the profile's website
  in accordance to the indieauth specification.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /__build/*
-!__build/.gitkeep
+!/__build/.gitkeep
 /.environment/*
+/internal/database/testdata/*
+!/internal/database/testdata/.gitkeep
