feat(BREAKING): rename the project to beacon
Renamed the project's name to beacon. The application's default name is
also beacon and can be changed with the BEACON_APP_NAME environment
variable when building with mage.

--- a/.forgejo/workflows/workflow.yaml
+++ b/.forgejo/workflows/workflow.yaml
@@ -22,8 +22,8 @@ jobs:
       with:
         target: test
       env:
-        PROJECT_TEST_VERBOSE: "1"
-        PROJECT_TEST_COVER: "1"
+        BEACON_TEST_VERBOSE: "1"
+        BEACON_TEST_COVER: "1"
     - name: Run gosec
       uses: https://codeflow.dananglin.me.uk/actions/mage-ci@main
       with:
@@ -45,7 +45,7 @@ jobs:
       with:
         target: gofmt
       env:
-        PROJECT_FAIL_ON_FORMATTING: 1
+        BEACON_FAIL_ON_FORMATTING: 1
     - name: Run staticcheck
       uses: https://codeflow.dananglin.me.uk/actions/mage-ci@main
       with:
