--- a/.forgejo/workflows/workflow.yaml
+++ b/.forgejo/workflows/workflow.yaml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2024 2024 Dan Anglin <d.n.i.anglin@gmail.com>
+#
+# SPDX-License-Identifier: AGPL-3.0-only
+
 ---
 name: CI
 
@@ -50,3 +54,12 @@ jobs:
       uses: https://codeflow.dananglin.me.uk/actions/mage-ci@main
       with:
         target: staticcheck
+
+  reuse:
+    name: REUSE Compliance Check
+    runs-on: docker
+    steps:
+    - name: Checkout Repository
+      uses: https://code.forgejo.org/actions/checkout@v4
+    - name: REUSE Compliance Check
+      uses: https://github.com/fsfe/reuse-action@v4
