--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -26,6 +26,7 @@ linters-settings:
         - $gostd
         - codeflow.dananglin.me.uk/apollo/beacon
         - github.com/golang-jwt/jwt/v5
+        - willnorris.com/go/microformats
   lll:
     line-length: 140
 
