--- a/.forgejo/workflows/workflow.yaml
+++ b/.forgejo/workflows/workflow.yaml
@@ -57,9 +57,10 @@ jobs:
 
   reuse:
     name: REUSE Compliance Check
+    if: ${{ ! github.event.pull_request.draft }}
     runs-on: docker
     steps:
     - name: Checkout Repository
       uses: https://code.forgejo.org/actions/checkout@v4
     - name: REUSE Compliance Check
-      uses: https://github.com/fsfe/reuse-action@v4
+      uses: https://github.com/fsfe/reuse-action@v5
