--- a/example/config.json
+++ b/example/config.json
@@ -2,6 +2,7 @@
     "bindAddress": "0.0.0.0",
     "port": 8080,
     "domain": "localhost",
+    "gracefulShutdownTimeout": 30,
     "database": {
       "path": "./beacon.db"
     },
